--- a/_estilos/PaginaTurma.css
+++ b/_estilos/PaginaTurma.css
@@ -65,95 +65,6 @@ main{
     margin-top: 0em;
 }
 
-.form{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0,0,0,0.7);
-    text-align: center;
-    display: none;
-}
-
-.form > div{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1.5em;
-}
-
-.form h1{
-    margin: 0 auto 0.5em auto;
-    white-space: nowrap;
-}
-
-div[id*="formCad"] > div{
-  text-align: right;
-  margin: 1em auto;
-}
-
-div[id*="formCad"] label{
-  font-size: 1em;
-}
-
-div[id*="formCad"] input, textarea{
-  width: 50%;
-  font-size: 1.1em;
-}
-
-.form textarea{
-  resize: none;
-  resize: vertical;
-  max-height: 100px;
-}
-
-.form .div-observacao label{
-  vertical-align: super;
-}
-
-#cadastroEstudante #nomeusuario{
-  text-transform: none;
-}
-
-.form button{
-    float: left;
-    display: inline-block;
-    font-size: 1.4em;
-    margin-top: 0.5em;
-    margin-left: 1em;
-}
-
-.form button:last-child{
-    float: right;
-    margin-right: 1em;
-}
-
-.form output{
-  display: block;
-  color: red;
-  min-height: 1.3em;
-}
-
-div[id*="formCad"] select{
-  width: 43.5%;
-  font-size: 1.1em;
-}
-
-#btn-cadDeficiencia, #btn-cadTurma{
-  margin: 0;
-  margin-left: 2%;
-  width: 5%;
-  height: 1.15em;
-  padding: 0px;
-  font-size: 1.3em;
-}
-
-#formCadDeficiencia div{
-  text-align: center;
-}
-
 #tableEstudantes{
   margin: 0 auto;
   border-collapse: collapse;
@@ -191,25 +102,131 @@ div[id*="formCad"] select{
   background-color: rgb(225,239,187);
 }
 
-.btn-entrar{
-  width: 4em;
+.btn-actionestudante{
+  width: 3em;
   height: 2em;
   border: none;
   background: none;
   border-radius: 0.5em;
   cursor: pointer;
+  display: inline-block;
 }
 
-.btn-entrar:hover{
+.btn-actionestudante:hover{
   background: rgb(190,190,190);
 }
 
-.btn-entrar span{
-  font-size: 1.4em;
+.btn-actionestudante span{
+  font-size: 1.7em;
 }
+
+.btn-editarestudante img{
+  width: 70%;
+}
+
 
 #turma{
   display: none;
+}
+
+/*########################## Estilização dos formulários ###########################*/
+
+.form{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.7);
+    text-align: center;
+    display: none;
+}
+
+.form > div{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1.5em;
+}
+
+.form h1{
+    margin: 0 1em 0.5em 1em;
+    white-space: nowrap;
+}
+
+div[id*="formCad"] > div{
+  text-align: right;
+  margin: 1em auto;
+}
+
+div[id*="formCad"] label{
+  font-size: 1em;
+}
+
+div[id*="formCad"] input:not([type="radio"]), textarea,.radio-embaralhar{
+  width: 45%;
+  font-size: 1.1em;
+  display: inline-block;
+}
+
+.radio-embaralhar{
+  text-align: left;
+}
+
+.radio-embaralhar input[type="radio"]{
+  margin-left: 10%;
+}
+
+.form textarea{
+  resize: none;
+  resize: vertical;
+  max-height: 100px;
+}
+
+.form .div-observacao label{
+  vertical-align: super;
+}
+
+#cadastroEstudante #nomeusuario{
+  text-transform: none;
+}
+
+.form button{
+    float: left;
+    display: inline-block;
+    font-size: 1.4em;
+    margin-top: 0.5em;
+    margin-left: 1em;
+}
+
+.form button:last-child{
+    float: right;
+    margin-right: 1em;
+}
+
+.form output{
+  display: block;
+  color: red;
+  min-height: 1.3em;
+}
+
+div[id*="formCad"] select{
+  width: 38.7%;
+  font-size: 1.1em;
+}
+
+#btn-cadDeficiencia, #btn-cadTurma{
+  margin: 0;
+  margin-left: 2%;
+  width: 5%;
+  height: 1.15em;
+  padding: 0px;
+  font-size: 1.3em;
+}
+
+#formCadDeficiencia div{
+  text-align: center;
 }
 
 @media only screen and (min-width: 475px){
