Banco de dados alterado para unicode_utf8 e Adição do modulo para edicao de estudantes

--- a/_estilos/PaginaTurma.css
+++ b/_estilos/PaginaTurma.css
@@ -188,8 +188,20 @@ div[id*="formCad"] input:not([type="radio"]), textarea,.radio-embaralhar{
   vertical-align: super;
 }
 
+.edicaosenha{
+  display: none;
+}
+
 #cadastroEstudante #nomeusuario, #edicaoDadosGerais #edicaonomeusuario{
   text-transform: none;
+}
+
+#edicaoDadosGerais #check-alterarsenha{
+  width: auto;
+}
+
+#check-alterarsenha:checked ~ .edicaosenha{
+  display: block;
 }
 
 .form button{
