--- a/_estilos/PaginaInicial.css
+++ b/_estilos/PaginaInicial.css
@@ -143,12 +143,25 @@ div#home button.icon-logout{
 }
 
 #game #btResetar{
-    font-size: 2em;
     padding: 0;
-    width: 1.8em;
-    cursor: pointer;
     float: right;
-    margin-right: 1em;
+    margin-right: 8%;
+}
+
+#game #voltarMenu{
+    margin-left: 8%;
+    float: left;
+    padding: 0;
+}
+
+#voltarMenu, #btResetar{
+  width: 10%;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+#voltarMenu img,#btResetar img{
+  width: 90%;
 }
 
 #game div#container{
@@ -205,19 +218,6 @@ div#home button.icon-logout{
     color: red;
 }
 /*############################ 2.2.2 - Estilização dos botões inferiores ############################*/
-
-#game #voltarMenu{
-    margin-left: 8%;
-    float: left;
-    width: 10%;
-    cursor: pointer;
-    overflow: hidden;
-    padding: 0;
-}
-
-#voltarMenu img{
-  width: 90%;
-}
 
 #controleGame{
   width: 100%;
@@ -386,20 +386,16 @@ div#home button.icon-logout{
         margin-left: 6%;
     }
 
-    #game #voltarMenu{
+    #game #voltarMenu,#btResetar{
         width: 8%;
     }
 
-    #voltarMenu img{
+    #voltarMenu img,#btResetar img{
         width: 80%;
     }
 
     #game h1#titlefase{
         font-size: 3.5em;
-    }
-
-    #game button#btResetar{
-        font-size: 3em;
     }
 }
 
